--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^2.13.8",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.16",
+    "antd": "^3.0.3",
     "babel-plugin-import": "^1.6.2",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^16.0.0",
     "react-app-rewire-less": "^2.0.8",
-    "react-app-rewired": "^1.3.4"
+    "react-app-rewired": "^1.3.4",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.16",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
