--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-app-rewired": "^1.3.4",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.16",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
